<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity2">

<!--    QUIZ LOGO-->
    <ImageView
        android:id="@+id/layout_quiz_image"
        android:layout_width="343dp"
        android:layout_height="112dp"
        android:layout_marginBottom="656dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/uncle_quiz_logo_black" />

<!--    User Name Text-->
    <TextView
        android:id="@+id/hey_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="592dp"
        android:fontFamily="@font/league_spartan_light"
        android:text="@string/hey"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent" />

<!--    Quiz Type Text-->
    <TextView
        android:id="@+id/question_type"
        android:layout_width="331dp"
        android:layout_height="62dp"
        android:layout_marginBottom="516dp"
        android:fontFamily="@font/league_spartan_medium"
        android:text="@string/choose_a_quiz_type"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent" />

<!--    Button ONE-->
    <LinearLayout
        android:id="@+id/quiz_option_1"
        android:layout_width="339dp"
        android:layout_height="84dp"
        android:layout_marginBottom="404dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/league_spartan_bold"
            android:text="@string/general_knowledge"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp" />

    </LinearLayout>

<!--    Button TWO-->
    <LinearLayout
        android:id="@+id/quiz_option_2"
        android:layout_width="339dp"
        android:layout_height="84dp"
        android:layout_marginBottom="308dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/league_spartan_bold"
            android:text="@string/geography"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp" />
    </LinearLayout>

<!--    Button THREE-->
    <LinearLayout
        android:id="@+id/quiz_option_3"
        android:layout_width="339dp"
        android:layout_height="84dp"
        android:layout_marginBottom="212dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/type3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/league_spartan_bold"
            android:text="@string/food"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp" />
    </LinearLayout>

<!--    Button FOUR-->
    <LinearLayout
        android:id="@+id/quiz_option_4"
        android:layout_width="339dp"
        android:layout_height="84dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/type4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/league_spartan_bold"
            android:text="@string/animals"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>